Almost all pathing functionality works!